--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,5 +35,16 @@ services:
       DATABASE_URL: postgres://postgres:password@db:5432/postgres
       REDIS_URL: redis://redis:6379/1
 
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
+
 volumes:
   postgres_data:
